-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.5.0
-
76d44aea0d4c1c05b9fb9156c6d370f55aa71c54 (qt-creator/qt-creator/master)
The behavior of my generic project use-case as reported in QTCREATORBUG-8840 has regressed again in an even worse manner.
Our usage of generic projects is in a legacy source tree with projects nested deeply in the root as sibling of library sources. In previous versions of Qt Creator (<=4.3?), the file tree was a bit annoying, in that it showed parent directories of the project as ".." instead of their names, but that was OK. This behavior is shown in the attachment "2013-02-26-test-QtCreator-2.6.x.png" on QTCREATORBUG-8840.
You can see that the behavior has changed in 4.5.x in the attachment "qt-creator-4.5-nested-project.png". It now shows some files in sibling directories in as a sub-tree starting at the absolute root of the file-system, which makes the view practically unusable.
I've re-uploaded the exact same project as attached to QTCREATORBUG-8840 for reproduction. How can I help this become a better-supported use case with regression tests?