Generic Project: cut common part of path in project explorer

This is necessary, if the project files on a
different directory than the source files. In this case, the project
explorer will show the full path e.g. in windows starting by C: for each
directory until the source files.

use-case:
some directory
|- project directory
   |- *.creator & *.files & ... generic project files
|- source directory
   |- some sub-directories and the source files

Fixes: QTCREATORBUG-19454
Change-Id: I95eee4afdc11adf4281220edc5f6ff29da41a3a5
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>