src/plugins/genericprojectmanager/genericproject.h
@@ -66,6 +66,7 @@ private:
     QStringList processEntries(const QStringList &paths,
                                QHash<QString, QString> *map = nullptr) const;
 
+    static QString findCommonSourceRoot(const QStringList &list);
     void refreshCppCodeModel();
     void updateDeploymentData();
     void activeTargetWasChanged();
